# meu-projeto-web

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  MANUAL.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
agents/: __init__.py  base_agent.py  fundamental_analyst.py  graph.py  llm.py  macro_sector.py  market_scanner.py  news_sentiment.py  orchestrator.py  risk_analyst.py  skeptic.py  technical_quant.py
api/: __init__.py
app/: __init__.py  auth.py  config.py  dependencies.py  main.py  managed_cycle.py  multi_day.py  pipeline.py  runtime_config.py
backtest/: __init__.py  engine.py  metrics.py  reports.py  simulator.py  slippage.py  walk_forward.py
core/: __init__.py  accounts.py  clock.py  enums.py  events.py  exceptions.py  logging.py  ontology.py
dashboard/: __init__.py  streamlit_app.py
data/: __init__.py  market_schema.py  universe.py
deploy/: supabase-case-form.sql  supabase-plans.sql  supabase-self-serve.sql  supabase-setup.sql
docs/: acceptance-criteria.md  agent-architecture.md  backlog.md  backtesting-policy.md  data-architecture.md  development-plan.md  execution-policy.md  live-trading-readiness.md  mvp-roadmap.md  observability-policy.md  product-requirements-document.md  project-brief.md  risk-policy.md  security-policy.md  sprint-1-stories.md  sprint-3-stories.md  sprint-4-stories.md  sprint-5-stories.md  system-architecture.md  technical-specification.md
execution/: __init__.py  broker_interface.py  fill_handler.py  ibkr_client.py  live_readiness.py  order_manager.py  order_schema.py  order_validator.py  paper_trading.py
features/: __init__.py  liquidity.py  (+4 more)
(+189 files in other folders)
